Initiated the Storing and retrieving of contents in the second household -- succesful

--- a/Household.html
+++ b/Household.html
@@ -49,8 +49,7 @@
             </div>
             <div class="validate">
               <small id="validate_Values"
-                >Please select a value before proceeding.</small
-              >
+                >Please select a value before proceeding.</small>
             </div>
             <!-- div.submit_Container -->
             <div class="submit">
